# Copyright (c) 2018-2022, Parker Owan.  All rights reserved.
# Licensed under BSD-3 Clause, https://opensource.org/licenses/BSD-3-Clause

# ------------------------------------------------------------------------------
# Add the example targets
# ------------------------------------------------------------------------------
add_subdirectory(cartpole)
add_subdirectory(navigator)
